# wim

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md
client/: CMakeLists.txt  CMakePresets.json  README.md
client/packaging/android/: build.gradle
client/packaging/linux/: wim-client.desktop  wimi-client.desktop
client/qml/: AdaptiveShell.qml  AppBottomNavigation.qml  AppIcon.qml  AppNavigationRail.qml  AuthPage.qml  Avatar.qml  ChatListPage.qml  ConnectionBanner.qml  ContactsPage.qml  ConversationPage.qml  ConversationRow.qml  EmptyState.qml  Icons.qml  Main.qml  MessageBubble.qml  MessageComposer.qml  RequestCard.qml  RequestsPage.qml  SettingsPage.qml  StatusBadge.qml  Theme.qml  Tokens.qml  Typography.qml
client/sql/: init_client_sqlite.sql
client/src/: main.cc
client/src/adapters/connection_gateway/: ClientProtocol.h  ConnectionGatewayClient.cc  ConnectionGatewayClient.h  ProtobufPacketCodec.cc  ProtobufPacketCodec.h  TcpFrameCodec.cc  TcpFrameCodec.h
client/src/adapters/fake/: FakeScenarioRepository.cc  FakeScenarioRepository.h
client/src/adapters/gate/: GateHttpClient.cc  GateHttpClient.h
client/src/adapters/sqlite/: SqliteClientRepository.cc  (+1 more)
client/src/app/: AppController.cc  AppController.h
client/src/domain/: ClientSnapshot.h
client/src/models/: ContactListModel.cc  ContactListModel.h  ConversationListModel.cc  ConversationListModel.h  MessageListModel.cc  MessageListModel.h  RequestListModel.cc  RequestListModel.h
client/src/platform/: PlatformServicesFactory.cc
client/src/ports/: IClientRepository.h  IPlatformServices.h
client/tests/integration/: ClientLiveNetworkTest.cc
client/tests/unit/: ClientModelsTest.cc  ClientNetworkTest.cc
server/: CMakeLists.txt  demo.cc  imNote.md  makefile  renamer.sh  requireStart.sh  rpcBuild.sh
server/chat/: CMakeLists.txt  config.ini  config.yaml  config2.yaml  demo.cc  demo2.cc  idea.md  q.cc  question.md  req.md
server/chat/include/: Channel.h  ChatServer.h  ChatSession.h  ConfigManager.h  Configer.h  Const.h  DeliveryService.h  FileRpc.h  FileService.h  Friend.h  FriendService.h  GatewayStreamService.h  Group.h  GroupService.h  IOServicePool.h  ImActiver.h  ImRpc.h  IocPool.h  KafkaOperator.h  Message.h  MessageService.h  MysqlManager.h  MysqlOperator.h  OnlineUser.h  Protocol.h  RedisManager.h  RpcChatClient.h  RpcChatService.h  RpcPool.h  RpcServer.h  RpcService.h  RpcStatusClient.h  Service.h  ServiceSystem.h  Singleton.h  SqlOperator.h  Timer.h  UserManager.h  UserService.h  test.h
server/chat/proto/: message.proto
server/chat/src/: ChatServer.cc  ChatSession.cc  main.cc  main.cpp
server/chat/test/: CMakeLists.txt
server/chat_backup/: CMakeLists.txt  config.yaml  config2.yaml  demo.cc  demo3.cc  demo4.cc  demo5.cc  message.proto  p.cc
server/chat_backup/include/: ChatSession.h  FileRpc.h  Group.h  ImRpc.h  KafkaOperator.h  OnlineUser.h  Service.h
server/chat_backup/proto/: message.proto
server/cmake/: WimProto.cmake  WimiProto.cmake
server/conf/: README.md  chat-beijing-im.yaml  chat-hunan-im.yaml  gate.yaml  gateway-beijing.yaml  gateway-hunan.yaml  message-beijing-im.yaml  state-multi.yaml  state-single.yaml  test-client.yaml  verify.json
server/file/: CMakeLists.txt  demo.cc
server/file/include/: Service.h
server/file/src/: Service.cc  main.cc
server/file/test/: CMakeLists.txt
server/gate/: CMakeLists.txt  cli.cc  config.ini  config.yaml  demo.cc  message.proto  sock.cc  state.proto  ws_client
server/gate/include/: Configer.h  Const.h  GateServer.h  HttpConnection.h  HttpSession.h  IOServicePool.h  ImGateway.h  ImSession.h  MysqlManager.h  MysqlOperator.h  RedisManager.h  RpcStatusClient.h  Service.h  ServiceSystem.h  Session.h  Singleton.h  StateClient.h  StateRpc.h  VerificationService.h  VerifyGrpcClient.h
server/gate/src/: ImGateway.cc  ImSession.cc  Session.cc  StateRpc.cc  main.cc
server/gate/test/: CMakeLists.txt  gate.cc  post.h  test_db.cc  test_service.cc  verificationInputTest.cc
server/gateway/: CMakeLists.txt
server/gateway/include/: GatewayServer.h  GatewaySession.h  MessageLink.h  SessionRegistry.h
server/gateway/src/: GatewayServer.cc  GatewaySession.cc  MessageLink.cc  SessionRegistry.cc  main.cc
server/message/: CMakeLists.txt
server/message/include/: DeliveryService.h  File.h  FileRpc.h  FileService.h  FriendService.h  GroupService.h  ImActiver.h
server/message/src/: main.cc
server/old_gate/: config.yaml
server/old_gate/include/: Service.h  StateClient.h
server/old_gate/src/: main.cc
server/old_gate/test/: demo.cc  gate.cc
server/public/: CMakeLists.txt  config.yaml
server/public/include/: Configer.h  Const.h  DbGlobal.h  Generator.h  GrpcSecurity.h  IocPool.h  Logger.h  Metrics.h  Mysql.h  MysqlPool.h  Redis.h  RedisOperator.h  RequestContext.h  RpcPool.h  TcpMessageCodec.h  ThreadPool.h
server/public/proto/: README.md  file.proto  gateway_message.proto  im.proto  message.proto  state.proto  tcp_message.proto  user.proto
server/public/src/: Configer.cc  IocPool.cc  Metrics.cc  Mysql.cc  Redis.cc  RedisOperator.cc  ThreadPool.cc
server/public/test/: CMakeLists.txt  gatewaySecurityTest.cc  mysqlDaoTest.cc  redisDaoTest.cc  resourceDeadlineTest.cc
server/state/: CMakeLists.txt  config.yaml  im.proto  state.proto
server/state/include/: global.h  imRpc.h  service.h
server/state/src/: imRpc.cc  main.cc  service.cc
server/state/test/: CMakeLists.txt
server/status/: CMakeLists.txt  ConfigMgr.h  MysqlDao.cpp  RedisMgr.cpp  RpcChatClient.cpp  RpcChatClient.h  Singleton.h  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  main.cpp  message.proto
server/test/: CMakeLists.txt  config.yaml  demo.cc  demos.cc
server/test/include/: chat.h  chatSession.h  client.h  gate.h  util.h
server/test/service/: chatSession.cc  chatSession.h  client.cc  client.h  global.h  heartbeat.cc  main.cc  net.cc  net.h  recvice.cc  sender.cc  textRecvier.cc  textSender.cc
server/test/util/: base.cc  base.h  util.cc
server/verify/: config.js  config.json  message.proto  server.js
(+132 files in other folders)
